--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
   jpa:
     generate-ddl: true
     hibernate:
-      ddl-auto: update
-      show-sql: false
-    show-sql: false
+      ddl-auto: create-drop
+      show-sql: true
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
